--- a/.github/workflows/terragrunt-deploy.yml
+++ b/.github/workflows/terragrunt-deploy.yml
@@ -21,6 +21,9 @@ on:
       SUBNET_FILTER:
         type: string
         required: true
+      REGISTRY:
+        type: string
+        required: true
 
 env:
   TF_VERSION: 1.2.2
@@ -59,8 +62,8 @@ jobs:
         working-directory: ${{env.TG_SRC_PATH}}/${{ inputs.TARGET_ENV }}
         env:
           TARGET_ENV: ${{ inputs.TARGET_ENV }}
-          CLIENT_IMAGE: ghcr.io/vivid-cpreston/${{ inputs.CLIENT_IMAGE }}:main
-          SERVER_IMAGE: ghcr.io/vivid-cpreston/${{ inputs.SERVER_IMAGE }}:main
+          CLIENT_IMAGE: ${{inputs.registry}}/${{ github.actor }}/${{ inputs.CLIENT_IMAGE }}:main
+          SERVER_IMAGE: ${{inputs.registry}}/${{ github.actor }}/${{ inputs.SERVER_IMAGE }}:main
           TFC_PROJECT: ${{ secrets.LICENSE_PLATE }}
           DB_PASS: ${{ secrets.DB_PASS }}
           ALB_NAME: ${{ inputs.ALB_NAME }}
@@ -73,8 +76,8 @@ jobs:
         working-directory: ${{env.TG_SRC_PATH}}/${{ inputs.TARGET_ENV }}
         env:
           TARGET_ENV: ${{ inputs.TARGET_ENV }}
-          CLIENT_IMAGE: ghcr.io/vivid-cpreston/${{ inputs.CLIENT_IMAGE }}-${{ steps.pr.outputs.pull_request_number }}
-          SERVER_IMAGE: ghcr.io/vivid-cpreston/${{ inputs.SERVER_IMAGE }}-${{ steps.pr.outputs.pull_request_number }}
+          CLIENT_IMAGE: ${{inputs.registry}}/${{ github.actor }}/${{ inputs.CLIENT_IMAGE }}-${{ steps.pr.outputs.pull_request_number }}:main
+          SERVER_IMAGE: ${{inputs.registry}}/${{ github.actor }}/${{ inputs.CLIENT_IMAGE }}-${{ steps.pr.outputs.pull_request_number }}:main
           TFC_PROJECT: ${{ secrets.LICENSE_PLATE }}
           DB_PASS: ${{ secrets.DB_PASS }}
           ALB_NAME: ${{ inputs.ALB_NAME }}
