--- a/.github/workflows/terragrunt-deploy.yml
+++ b/.github/workflows/terragrunt-deploy.yml
@@ -46,19 +46,13 @@ jobs:
         with:
           terraform_version: ${{ env.TF_VERSION }}
           cli_config_credentials_token: ${{ secrets.TFC_TEAM_TOKEN }}
-          
-      - name: Get Pull Request Number
-        id: pr
-        run: echo "::set-output name=pull_request_number::$(gh pr view --json number -q .number || echo "")"
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - uses: peter-murray/terragrunt-github-action@v1.0.0
         with:
           terragrunt_version: ${{ env.TG_VERSION }}
       
       - name: Terragrunt Apply (No PR)
-        if: ${{'' == steps.pr.outputs.pull_request_number}}
+        if: ${{ github.event.pull_request.number == ''}}
         working-directory: ${{env.TG_SRC_PATH}}/${{ inputs.TARGET_ENV }}
         env:
           TARGET_ENV: ${{ inputs.TARGET_ENV }}
@@ -70,14 +64,14 @@ jobs:
           VPC_NAME: ${{ inputs.VPC_NAME }}
           SUBNET_FILTER: ${{ inputs.SUBNET_FILTER }}
         run: terragrunt apply --terragrunt-non-interactive -auto-approve
-        
-      - name: Terragrunt Apply (With PR)
-        if: ${{'' != steps.pr.outputs.pull_request_number}}
+      
+      - name: Terragrunt Apply (PR)
+        if: ${{ github.event.pull_request.number > 0}}
         working-directory: ${{env.TG_SRC_PATH}}/${{ inputs.TARGET_ENV }}
         env:
           TARGET_ENV: ${{ inputs.TARGET_ENV }}
-          CLIENT_IMAGE: ${{inputs.registry}}/${{ github.actor }}/${{ inputs.CLIENT_IMAGE }}-${{ steps.pr.outputs.pull_request_number }}:main
-          SERVER_IMAGE: ${{inputs.registry}}/${{ github.actor }}/${{ inputs.CLIENT_IMAGE }}-${{ steps.pr.outputs.pull_request_number }}:main
+          CLIENT_IMAGE: ${{inputs.registry}}/${{ github.actor }}/${{ inputs.CLIENT_IMAGE }}-${{ github.event.pull_request.number }}:pr-${{ github.event.pull_request.number }}
+          SERVER_IMAGE: ${{inputs.registry}}/${{ github.actor }}/${{ inputs.SERVER_IMAGE }}-${{ github.event.pull_request.number }}:pr-${{ github.event.pull_request.number }}
           TFC_PROJECT: ${{ secrets.LICENSE_PLATE }}
           DB_PASS: ${{ secrets.DB_PASS }}
           ALB_NAME: ${{ inputs.ALB_NAME }}
