--- a/.github/workflows/mvn-server.yml
+++ b/.github/workflows/mvn-server.yml
@@ -125,16 +125,36 @@ jobs:
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
         
-      - name: Extract metadata (tags, labels) for Docker
-        id: meta
+      - name: Extract metadata (tags, labels) for Docker (with PR)
+        if: ${{ github.event.pull_request.number > 0 }}
+        id: meta_pr
         uses: docker/metadata-action@98669ae865ea3cffbcbaa878cf57c20bbf1c6c38
         with:
-          images: ${{ inputs.REGISTRY }}/${{ env.IMAGE_NAME }}
+          images: ${{ inputs.REGISTRY}}/${{ env.IMAGE_NAME }}-${{ github.event.pull_request.number}}
+      
+      - name: Extract metadata (tags, labels) for Docker (no PR)
+        if: ${{ github.event.pull_request.number == '' }}
+        id: meta_nopr
+        uses: docker/metadata-action@98669ae865ea3cffbcbaa878cf57c20bbf1c6c38
+        with:
+          images: ${{ inputs.REGISTRY}}/${{ env.IMAGE_NAME }}
+
         
-      - name: Build and push Docker image
+      - name: Build and push Docker image (no PR)
+        if: ${{ github.event.pull_request.number == '' }}
         uses: docker/build-push-action@ad44023a93711e3deb337508980b4b5e9bcdc5dc
         with:
           context: .
           push: true
-          tags: ${{ steps.meta.outputs.tags }}
-          labels: ${{ steps.meta.outputs.labels }}
+          tags: ${{ steps.meta_nopr.outputs.tags }}
+          labels: ${{ steps.meta_nopr.outputs.labels }}
+          
+      - name: Build and push Docker image (with PR)
+        if: ${{ github.event.pull_request.number > 0 }}
+        uses: docker/build-push-action@ad44023a93711e3deb337508980b4b5e9bcdc5dc
+        with:
+          context: .
+          push: true
+          tags: ${{ steps.meta_pr.outputs.tags }}
+          labels: ${{ steps.meta_pr.outputs.labels }}
+     
