--- a/.github/workflows/pr-open.yml
+++ b/.github/workflows/pr-open.yml
@@ -1,18 +1,18 @@
 name: "Pull Request"
 
-on:
-  pull_request:
-    # The branches below must be a subset of the branches above
-    branches: [ "main" ]
-    paths:
-      - ".github/workflows/pr.yaml"
-      - ".github/workflows/tf-plan.yaml"
-      - "client/**"
-      - "server/**"
-      - "terraform/**"
-      - "!terraform/sandbox/**"
-      - "Dockerfile"
-      - "!**/README.md"
+# on:
+#   pull_request:
+#     # The branches below must be a subset of the branches above
+#     branches: [ "main" ]
+#     paths:
+#       - ".github/workflows/pr.yaml"
+#       - ".github/workflows/tf-plan.yaml"
+#       - "client/**"
+#       - "server/**"
+#       - "terraform/**"
+#       - "!terraform/sandbox/**"
+#       - "Dockerfile"
+#       - "!**/README.md"
 
 env:
   REGISTRY: ghcr.io
