--- a/.github/workflows/main-merge.yml
+++ b/.github/workflows/main-merge.yml
@@ -26,3 +26,9 @@ jobs:
         uses: github/codeql-action/upload-sarif@v2
         with:
           sarif_file: "trivy-results.sarif"
+  
+  terragrunt-plan:
+    name: Terragrunt Plan
+    runs-on: ubuntu-18.04
+    steps:
+      uses: ./.github/workflows/terragrunt-plan.yml
