--- a/.github/workflows/pr-open.yml
+++ b/.github/workflows/pr-open.yml
@@ -1,6 +1,7 @@
 name: "Pull Request"
 
-# on:
+on:
+  workflow_dispatch:
 #   pull_request:
 #     # The branches below must be a subset of the branches above
 #     branches: [ "main" ]
