--- a/.github/workflows/trivy.yml
+++ b/.github/workflows/trivy.yml
@@ -1,7 +1,7 @@
 name: "Pull Request"
 
 on:
-  workflow_dispatch:
+  workflow_call:
 #   pull_request:
 #     # The branches below must be a subset of the branches above
 #     branches: [ "main" ]
@@ -75,92 +75,6 @@ jobs:
         with:
           sarif_file: "trivy-results.sarif"
 
-  build-server:
-    name: Build-Server
-    needs:
-      - check
-    if: needs.check.outputs.build == 'true'
-    runs-on: ubuntu-latest
-    permissions:
-      contents: read
-      packages: write
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v2
-
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v1
-
-      - name: Cache Docker layers
-        uses: actions/cache@v2
-        with:
-          path: /tmp/.buildx-cache
-          key: ${{ runner.os }}-buildx-${{ github.sha }}
-          restore-keys: |
-            ${{ runner.os }}-buildx-
-      - name: Log in to the Container registry
-        uses: docker/login-action@v1
-        with:
-          registry: ${{ env.REGISTRY }}
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
-
-      - name: Build and push Server Docker image
-        uses: docker/build-push-action@v2
-        with:
-          context: ./server/
-          push: true
-          tags: ${{ env.REGISTRY }}/${{ github.repository }}:${{ github.event.number }}-server
-          cache-from: type=gha
-          cache-to: type=gha,mode=max
-
-      - name: Store the Server docker image URL for later steps
-        run: |
-          echo "SERVER_IMAGE=${{ env.REGISTRY }}/${{ github.repository }}:${{ github.event.number }}-client" >> $GITHUB_ENV
-
-  build-client:
-    name: Build-Client
-    needs:
-      - check
-    if: needs.check.outputs.build == 'true'
-    runs-on: ubuntu-latest
-    permissions:
-      contents: read
-      packages: write
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v2
-
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v1
-
-      - name: Cache Docker layers
-        uses: actions/cache@v2
-        with:
-          path: /tmp/.buildx-cache
-          key: ${{ runner.os }}-buildx-${{ github.sha }}
-          restore-keys: |
-            ${{ runner.os }}-buildx-
-      - name: Log in to the Container registry
-        uses: docker/login-action@v1
-        with:
-          registry: ${{ env.REGISTRY }}
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
-
-      - name: Build and push Client Docker image
-        uses: docker/build-push-action@v2
-        with:
-          context: ./client/
-          push: true
-          tags: ${{ env.REGISTRY }}/${{ github.repository }}:${{ github.event.number }}-client
-          cache-from: type=gha
-          cache-to: type=gha,mode=max
-
-      - name: Store the Client docker image URL for later steps
-        run: |
-          echo "CLIENT_IMAGE=${{ env.REGISTRY }}/${{ github.repository }}:${{ github.event.number }}-client" >> $GITHUB_ENV
-
   tests-client:
     name: Tests-Client
     needs:
@@ -195,9 +109,6 @@ jobs:
 
   trivy-server:
     name: Trivy-Server
-    needs:
-      - build-server
-      - build-client
     runs-on: ubuntu-latest
     timeout-minutes: 5
     steps:
@@ -207,7 +118,7 @@ jobs:
       - name: Trivy Vulnerability Scan
         uses: aquasecurity/trivy-action@0.3.0
         with:
-          image-ref: ${{ env.REGISTRY }}/${{ github.repository }}:${{ github.event.number }}-server
+          image-ref: ${{env.REGISTRY}}/${{ github.actor }}/${{ github.repository }}-server-${{ github.event.pull_request.number }}:pr-${{ github.event.pull_request.number }}
           ignore-unfixed: true
           severity: CRITICAL
           format: "sarif"
@@ -220,9 +131,6 @@ jobs:
 
   trivy-client:
     name: Trivy-Client
-    needs:
-      - build-server
-      - build-client
     runs-on: ubuntu-latest
     timeout-minutes: 5
     steps:
@@ -232,7 +140,7 @@ jobs:
       - name: Trivy Vulnerability Scan
         uses: aquasecurity/trivy-action@0.3.0
         with:
-          image-ref: ${{ env.REGISTRY }}/${{ github.repository }}:${{ github.event.number }}-client
+          image-ref: ${{env.REGISTRY}}/${{ github.actor }}/${{ github.repository }}-client-${{ github.event.pull_request.number }}:pr-${{ github.event.pull_request.number }}
           ignore-unfixed: true
           severity: CRITICAL
           format: "sarif"
