Update DriveBC url

--- a/client/wfnews-war/src/main/angular/src/assets/data/appConfig.json
+++ b/client/wfnews-war/src/main/angular/src/assets/data/appConfig.json
@@ -83,7 +83,7 @@
     "mapServices": {
         "openmapsBaseUrl": "https://test.openmaps.gov.bc.ca/geo/pub/ows",
         "#openmapsBaseUrl": "https://openmaps.gov.bc.ca/geo/pub/ows",
-        "drivebcBaseUrl": "http://dev-maps.th.gov.bc.ca/geoV05/ows"
+        "drivebcBaseUrl": "https://dev-maps.th.gov.bc.ca/geoV05/ows"
     },
 
     "causeCodeConfig": {
