--- a/client/wfnews-war/src/main/resources/static.properties
+++ b/client/wfnews-war/src/main/resources/static.properties
@@ -5,3 +5,6 @@ openmaps.url=https://test.openmaps.gov.bc.ca/geo/pub/ows
 openmaps.internal.url=https://openmaps.gov.bc.ca/geo/pub/ows
 drivebc.url=http://dev-maps.th.gov.bc.ca/geoV05/ows
 wfnews.url=http://wfnews-main-alb-dev-1899211340.ca-central-1.elb.amazonaws.com
+incidentsUri=https://i1bcwsapi.nrs.gov.bc.ca/wfim-incidents-api
+orgunitUri=https://i1bcwsapi.nrs.gov.bc.ca/wforg-org-unit-api
+webade-oauth2.authorize.url=https://intapps.nrs.gov.bc.ca/ext/oauth2/v1/oauth/authorize
