Add/Remove custom evac order/alerts (#46)
* Add/Remove custom evac order/alerts

* Add contact defaults

* Update invalid icons

* Remove change detector ref from contacts

* Update DriveBC url

* WFNEWS-411

* WFNEWS-413

* Enable smoke forecast button

--- a/client/wfnews-war/src/main/resources/static.properties
+++ b/client/wfnews-war/src/main/resources/static.properties
@@ -3,7 +3,7 @@ build.number=1
 project.acronym=WFNEWS
 openmaps.url=https://test.openmaps.gov.bc.ca/geo/pub/ows
 openmaps.internal.url=https://openmaps.gov.bc.ca/geo/pub/ows
-drivebc.url=http://dev-maps.th.gov.bc.ca/geoV05/ows
+drivebc.url=https://dev-maps.th.gov.bc.ca/geoV05/ows
 wfnews.url=http://wfnews-main-alb-dev-1899211340.ca-central-1.elb.amazonaws.com
 incidentsUri=https://i1bcwsapi.nrs.gov.bc.ca/wfim-incidents-api
 orgunitUri=https://i1bcwsapi.nrs.gov.bc.ca/wforg-org-unit-api
