--- a/.github/workflows/mvn-client.yml
+++ b/.github/workflows/mvn-client.yml
@@ -102,7 +102,7 @@ jobs:
           images: ${{ inputs.REGISTRY}}/${{ env.IMAGE_NAME }}
           tags: |
             type=schedule
-            type=raw,value=${GITHUB_REF##*/}
+            type=raw,value=${{ github.base_ref }}
             type=ref,event=tag
             type=raw,value=${{ github.event.pull_request.number}}
           
