--- a/.github/workflows/sonarqube.yml
+++ b/.github/workflows/sonarqube.yml
@@ -3,18 +3,15 @@ on:
 
 name: SonarQube Scan
 jobs:
-  sonarqube:
-    name: SonarQube Trigger
+  sonarcloud:
     runs-on: ubuntu-latest
     steps:
-    - name: Checking out
-      uses: actions/checkout@master
+    - uses: actions/checkout@v2
       with:
         # Disabling shallow clone is recommended for improving relevancy of reporting
         fetch-depth: 0
-    - name: SonarQube Scan
-      uses: kitabisa/sonarqube-action@v1.2.0
-      with:
-        host: https://sonarcloud.io/organizations/bcgov-sonarcloud
-        login: ${{ secrets.IDIR_AS_EMAIL }}
-        password: ${{ secrets.IDIR_PASSWORD }}
+    - name: SonarCloud Scan
+      uses: sonarsource/sonarcloud-github-action@master
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
