--- a/.github/workflows/sonarcloud.yml
+++ b/.github/workflows/sonarcloud.yml
@@ -1,7 +1,6 @@
-on:
-  workflow_dispatch:
+on: [workflow_dispatch,pull_request]
 
-name: SonarQube Scan
+name: SonarCloud Scan
 jobs:
   sonarcloud:
     runs-on: ubuntu-latest
