--- a/.github/workflows/deploy-dev.yml
+++ b/.github/workflows/deploy-dev.yml
@@ -6,7 +6,7 @@ env:
   NPMRC: ${{ secrets.NPMRC }}
   TRIGGERS: ('client/' 'server/' '.github/workflows')
 on:
-  pull_request:
+  pull_request_target:
     types:
       - closed
     # The branches below must be a subset of the branches above
@@ -60,7 +60,7 @@ jobs:
   terragrunt-deploy:
     # if: needs.check.outputs.build == 'true'
     uses: ./.github/workflows/terragrunt-deploy.yml
-    # needs: [trivy]
+    needs: [call-mvn-client, call-mvn-server]
     with:
       REGISTRY: ghcr.io
       #Server and Image name get PR number as appropriate inside deploy step
