Seperated self-reference changes to only affect client build

--- a/.github/workflows/mvn-client.yml
+++ b/.github/workflows/mvn-client.yml
@@ -105,6 +105,7 @@ jobs:
         uses: docker/build-push-action@ad44023a93711e3deb337508980b4b5e9bcdc5dc
         with:
           context: .
+          file: Dockerfile_client
           push: true
           tags: ${{ steps.meta_nopr.outputs.tags }}
           labels: ${{ steps.meta_nopr.outputs.labels }}
@@ -114,6 +115,7 @@ jobs:
         uses: docker/build-push-action@ad44023a93711e3deb337508980b4b5e9bcdc5dc
         with:
           context: .
+          file: Dockerfile_client
           push: true
           tags: ${{ steps.meta_pr.outputs.tags }}
           labels: ${{ steps.meta_pr.outputs.labels }}
