--- a/client/wfnews-war/src/main/resources/static.properties
+++ b/client/wfnews-war/src/main/resources/static.properties
@@ -7,3 +7,4 @@ drivebc.url=https://dev-maps.th.gov.bc.ca/geoV05/ows
 incidentsUri=https://i1bcwsapi.nrs.gov.bc.ca/wfim-incidents-api
 orgunitUri=https://i1bcwsapi.nrs.gov.bc.ca/wforg-org-unit-api
 webade-oauth2.authorize.url=https://intapps.nrs.gov.bc.ca/ext/oauth2/v1/oauth/authorize
+wfim-rest.url=https://i1bcwsapi.nrs.gov.bc.ca/wfim-incidents-api
