--- a/client/wfnews-war/src/main/angular/package.json
+++ b/client/wfnews-war/src/main/angular/package.json
@@ -89,7 +89,7 @@
     "@ngrx/schematics": "^12.2.0",
     "@types/jasmine": "~3.6.0",
     "@types/jasminewd2": "~2.0.2",
-    "@types/jest": "^28.1.6",
+    "@types/jest": "~28.1.6",
     "@types/node": "^12.11.1",
     "@typescript-eslint/eslint-plugin": "5.27.1",
     "@typescript-eslint/parser": "5.27.1",
