fixes for missing values

--- a/.github/workflows/deploy-dev.yml
+++ b/.github/workflows/deploy-dev.yml
@@ -79,4 +79,6 @@ jobs:
   liquibase-deploy:
     uses: ./.github/workflows/liquibase.yml
     needs: [terragrunt-deploy]
+    with:
+      DB_USER: wfnewsdev
     secrets: inherit
