fixed syntax issues

--- a/docker/default.conf
+++ b/docker/default.conf
@@ -3,7 +3,7 @@ server {
 
     server_name _;
 
-    return 301 https://$host$request_uri
+    return 301 https://$host$request_uri;
 }
 
 server {
@@ -12,6 +12,6 @@ server {
   server_name _;
 
   location / {
-    proxy_pass {wfnews_db_url}:5432
+    proxy_pass {wfnews_db_url}:5432;
   }
 }
