--- a/.github/workflows/liquibase.yml
+++ b/.github/workflows/liquibase.yml
@@ -5,14 +5,15 @@ on:
         required: true
         type: string
 
-steps:
-  - uses: actions/checkout@v2
-  
-  - uses: liquibase/liquibase-github-action@v7
-    with:
-      operation: 'update'
-      classpath: './database'
-      changeLogFile: 'main-changelog.json'
-      username: ${{ inputs.DB_USER }}
-      password: ${{ secrets.DB_PASS }}
-      url: ${{ secrets.WFNEWS_DB_URL }}
+jobs:
+  run liquibase:
+    - uses: actions/checkout@v2
+    
+    - uses: liquibase/liquibase-github-action@v7
+      with:
+        operation: 'update'
+        classpath: './database'
+        changeLogFile: 'main-changelog.json'
+        username: ${{ inputs.DB_USER }}
+        password: ${{ secrets.DB_PASS }}
+        url: ${{ secrets.WFNEWS_DB_URL }}
