--- a/.github/workflows/liquibase.yml
+++ b/.github/workflows/liquibase.yml
@@ -6,14 +6,16 @@ on:
         type: string
 
 jobs:
-  run liquibase:
-    - uses: actions/checkout@v2
+  run-liquibase:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
     
-    - uses: liquibase/liquibase-github-action@v7
-      with:
-        operation: 'update'
-        classpath: './database'
-        changeLogFile: 'main-changelog.json'
-        username: ${{ inputs.DB_USER }}
-        password: ${{ secrets.DB_PASS }}
-        url: ${{ secrets.WFNEWS_DB_URL }}
+      - uses: liquibase/liquibase-github-action@v7
+        with:
+          operation: 'update'
+          classpath: './database'
+          changeLogFile: 'main-changelog.json'
+          username: ${{ inputs.DB_USER }}
+          password: ${{ secrets.DB_PASS }}
+          url: ${{ secrets.WFNEWS_DB_URL }}
