--- a/.github/workflows/terragrunt-plan.yml
+++ b/.github/workflows/terragrunt-plan.yml
@@ -12,6 +12,7 @@ env:
   REPOSITORY: ghcr.io
   CLIENT_IMAGE: "wfnews-client"
   SERVER_IMAGE: "wfnews-server"
+  DB_IMAGE: "wfnews-db"
   TARGET_ENV: "dev"
   ALB_NAME: "default"
   VPC_NAME: "Dev_vpc"
@@ -40,6 +41,7 @@ jobs:
           TARGET_ENV: ${{ env.TARGET_ENV }}
           CLIENT_IMAGE: ${{env.registry}}/${{ github.actor }}/${{ env.CLIENT_IMAGE }}:main
           SERVER_IMAGE: ${{env.registry}}/${{ github.actor }}/${{ env.SERVER_IMAGE }}:main
+          DB_IMAGE: ${{env.registry}}/${{ github.actor }}/${{ env.DB_IMAGE }}:main
           TFC_PROJECT: ${{ secrets.LICENSE_PLATE }}
           DB_PASS: ${{ secrets.DB_PASS }}
           ALB_NAME: ${{ env.ALB_NAME }}
