--- a/.github/workflows/reverse-proxy.yml
+++ b/.github/workflows/reverse-proxy.yml
@@ -32,7 +32,7 @@ jobs:
         uses: docker/login-action@v2
         with:
           registry: ${{ inputs.REGISTRY }}
-          username: ${{ githusb.actor }}
+          username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
         
       - name: Extract metadata (tags, labels) for Docker
