--- a/.github/workflows/deploy-dev.yml
+++ b/.github/workflows/deploy-dev.yml
@@ -9,6 +9,8 @@ on:
   pull_request_target:
     types:
       - closed
+    branches:
+      - 'main'
     paths:
       - ".github/workflows/deploy-dev.yml"
       - ".github/workflows/mvn-client.yml"
@@ -23,7 +25,7 @@ on:
 jobs:
 
   call-mvn-client:
-    if: github.event.pull_request.merged == true && startsWith(github.head_ref, 'main')
+    if: github.event.pull_request.merged == true
     uses: ./.github/workflows/mvn-client.yml
     secrets: inherit
     with: 
@@ -32,7 +34,7 @@ jobs:
       TARGET_ENV: dev
 
   call-mvn-server:
-    if: github.event.pull_request.merged == true && startsWith(github.head_ref, 'main')
+    if: github.event.pull_request.merged == true
     uses: ./.github/workflows/mvn-server.yml
     #SMTP_PASSWORD, DV_PASSWORD AND TFC_PROJECT ARE STORED AS SECRET
     with:
