--- a/.github/workflows/liquibase.yml
+++ b/.github/workflows/liquibase.yml
@@ -18,4 +18,4 @@ jobs:
           changeLogFile: 'main-changelog.json'
           username: wfnews${{ inputs.TARGET_ENV }}
           password: ${{ secrets.DB_PASS }}
-          url: jdbc:postgresql://${{ secrets.WFNEWS_DB_URL }}:5432/wfnews${{ inputs.TARGET_ENV }}
+          url: jdbc:postgresql://wfnews-db.${{inputs.TARGET_ENV}}.bcwildfireservices.com:443/wfnews${{ inputs.TARGET_ENV }}
