Updated reverse proxy settings

--- a/docker/default.conf
+++ b/docker/default.conf
@@ -12,6 +12,6 @@ server {
   server_name _;
 
   location / {
-    proxy_pass {wfnews_db_url}:5432;
+    proxy_pass https://{wfnews_db_url}:5432;
   }
 }
