--- a/.github/workflows/deploy-dev.yml
+++ b/.github/workflows/deploy-dev.yml
@@ -16,6 +16,7 @@ on:
       - "client/**"
       - "server/**"
       - "database/**"
+      - "docker/**"
       - "terraform/**"
       - "Dockerfile"
       - "!**/README.md"
