--- a/docker/default.conf
+++ b/docker/default.conf
@@ -7,11 +7,11 @@ server {
 }
 
 server {
-  listen 443 ssl;
-  listen [::]:443 ssl;
+  listen 5432 so_keepalive=on;
+  listen [::]:5432 so_keepalive=on;
   server_name _;
 
   location / {
-    proxy_pass https://{wfnews_db_url}:5432;
+    proxy_pass http://{wfnews_db_url}:5432;
   }
 }
