log out option in admin pag

--- a/client/wfnews-war/src/main/angular/src/assets/data/appConfig.json
+++ b/client/wfnews-war/src/main/angular/src/assets/data/appConfig.json
@@ -28,7 +28,8 @@
             "rofs-table": 500,
             "incidents-table": 500
         },
-        "lazyAuthenticate": "true"
+        "lazyAuthenticate": "true",
+        "siteminderUrlPrefix": "https://logontest7.gov.bc.ca/clp-cgi/logoff.cgi?returl="    
     },
 
     "externalAppConfig": {
