--- a/client/wfnews-war/src/main/angular/package.json
+++ b/client/wfnews-war/src/main/angular/package.json
@@ -39,6 +39,7 @@
     "@ngrx/store": "^13.1.0 ",
     "@ngrx/store-devtools": "^13.1.0 ",
     "@qqnluaq/smk": "=1.0.16000",
+    "@types/geojson": "7946.0.8",
     "@wf1/core-ui": "^2.4.5",
     "@wf1/incidents-rest-api": "^1.5.1-SNAPSHOT",
     "@wf1/orgunit-rest-api": "^2.0.2",
@@ -61,6 +62,7 @@
     "ngrx-store-localstorage": "^7.0.0",
     "ngrx-store-logger": "^0.2.2",
     "ngx-connection-service": "7.0.3",
+    "ngx-cookie-service": "^14.0.1",
     "ngx-mask": "^6.5.18",
     "ngx-moment": "^3.1.0",
     "ngx-pagination": "^5.1.1",
@@ -73,8 +75,7 @@
     "tslib": "^2.0.0",
     "vanilla-text-mask": "^5.1.1",
     "video.js": "^7.15.4",
-    "zone.js": "~0.11.4",
-    "@types/geojson": "7946.0.8"
+    "zone.js": "~0.11.4"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~13.3.8",
