--- a/client/wfnews-war/src/main/resources/static.properties
+++ b/client/wfnews-war/src/main/resources/static.properties
@@ -8,3 +8,4 @@ incidentsUri=https://i1bcwsapi.nrs.gov.bc.ca/wfim-incidents-api
 orgunitUri=https://i1bcwsapi.nrs.gov.bc.ca/wforg-org-unit-api
 webade-oauth2.authorize.url=https://intapps.nrs.gov.bc.ca/ext/oauth2/v1/oauth/authorize
 wfim-rest.url=https://i1bcwsapi.nrs.gov.bc.ca/wfim-incidents-api
+siteminder.url.prefix=https://logontest7.gov.bc.ca/clp-cgi/logoff.cgi?returl=
