Unified health-check and proxy pass on single port

--- a/docker/default.conf
+++ b/docker/default.conf
@@ -1,15 +1,11 @@
 server {
-    listen 80;
-
-    server_name _;
-
-    return 200;
-}
-
-server {
   listen 5432 so_keepalive=on;
   listen [::]:5432 so_keepalive=on;
   server_name _;
+
+  location /healthCheck {
+    return 200;
+  }
 
   location / {
     proxy_pass http://{wfnews_db_url}:5432;
