--- a/docker/default.conf
+++ b/docker/default.conf
@@ -1,6 +1,6 @@
 server {
-  listen 5432 so_keepalive=on;
-  listen [::]:5432 so_keepalive=on;
+  listen 8080 so_keepalive=on;
+  listen [::]:8080 so_keepalive=on;
   server_name _;
 
   location /healthCheck {
@@ -9,5 +9,9 @@ server {
 
   location / {
     proxy_pass http://{wfnews_db_url}:5432;
+    proxy_connect_timeout 60s;
+    proxy_socket_keepalive on;
   }
+
+  
 }
