--- a/docker/default.conf
+++ b/docker/default.conf
@@ -1,17 +1,20 @@
-server {
-  listen 8080 so_keepalive=on;
-  listen [::]:8080 so_keepalive=on;
-  server_name _;
+stream {
 
-  location /healthCheck {
-    return 200;
+  upstream postgres {
+    server {wfnews_db_url}:5432;
   }
 
-  location / {
-    proxy_pass http://{wfnews_db_url}:5432;
-    proxy_connect_timeout 60s;
-    proxy_socket_keepalive on;
-  }
+  server {
+    listen 8080 so_keepalive=on;
+    allow all;
+    server_name _;
 
-  
+    location /healthCheck {
+      return 200;
+    }
+
+    location / {
+      proxy_pass postgres;
+    }
+  }
 }
