WFNEWS-375 incident api - CRUD functionality, security, move GET functions to new endpoint

--- a/server/wfnews-api-rest-common/pom.xml
+++ b/server/wfnews-api-rest-common/pom.xml
@@ -25,7 +25,10 @@
 			<artifactId>wfone-common-rest-common</artifactId>
 			<version>1.3.0</version>
 		</dependency>
-		
+		<dependency>
+				<groupId>ca.bc.gov.nrs.common</groupId>
+				<artifactId>nrs-common-rest-common</artifactId>
+		</dependency>
     <dependency>
       <groupId>org.codehaus.jackson</groupId>
       <artifactId>jackson-mapper-asl</artifactId>
