--- a/server/pom.xml
+++ b/server/pom.xml
@@ -30,19 +30,68 @@
 	</modules>
 	<dependencyManagement>
 		<dependencies>
-
+		
 			<dependency>
 				<groupId>ca.bc.gov.webade</groupId>
 				<artifactId>webade-spring-bootstrap-support</artifactId>
 				<version>1.1.0.0</version>
 			</dependency>
-
+			<dependency>
+				<groupId>ca.bc.gov.nrs.common</groupId>
+				<artifactId>nrs-common-model</artifactId>
+				<version>2.1.3</version>
+			</dependency>
+			<dependency>
+				<groupId>ca.bc.gov.nrs.common</groupId>
+				<artifactId>nrs-common-rest-common</artifactId>
+				<version>2.1.3</version>
+			</dependency>
+			<dependency>
+				<groupId>ca.bc.gov.nrs.common</groupId>
+				<artifactId>nrs-common-rest-client</artifactId>
+				<version>2.1.3</version>
+			</dependency>
+			<dependency>
+				<groupId>ca.bc.gov.nrs.common</groupId>
+				<artifactId>nrs-common-logging-util</artifactId>
+				<version>2.1.3</version>
+			</dependency>
+			<dependency>
+				<groupId>ca.bc.gov.nrs.common</groupId>
+				<artifactId>nrs-common-rest-endpoints</artifactId>
+				<version>2.1.3</version>
+			</dependency>
+			<dependency>
+				<groupId>ca.bc.gov.nrs.common</groupId>
+				<artifactId>nrs-common-service-api</artifactId>
+				<version>2.1.3</version>
+			</dependency>
+			<dependency>
+				<groupId>ca.bc.gov.nrs.common</groupId>
+				<artifactId>nrs-common-code-endpoints</artifactId>
+				<version>2.1.3</version>
+			</dependency>
+			<dependency>
+				<groupId>ca.bc.gov.nrs.common</groupId>
+				<artifactId>nrs-common-util</artifactId>
+				<version>2.1.3</version>
+			</dependency>
+			<dependency>
+				<groupId>ca.bc.gov.nrs.common</groupId>
+				<artifactId>nrs-common-persistence</artifactId>
+				<version>2.1.3</version>
+			</dependency>
+			<dependency>
+				<groupId>ca.bc.gov.nrs.common</groupId>
+				<artifactId>nrs-common-test-util</artifactId>
+				<version>2.1.3</version>
+			</dependency>
 			<dependency>
 				<groupId>org.apache.commons</groupId>
 				<artifactId>commons-text</artifactId>
 				<version>1.8</version>
 			</dependency>
-
+		
 			<dependency>
 				<groupId>org.springframework</groupId>
 				<artifactId>spring-context</artifactId>
@@ -139,12 +188,16 @@
 				<artifactId>wfone-common-checkhealth</artifactId>
 				<version>1.3.0</version>
 			</dependency>
-
+			<dependency>
+    <groupId>postgresql</groupId>
+    <artifactId>postgresql</artifactId>
+    <version>9.0-801.jdbc4</version>
+</dependency>
 			<dependency>
 				<groupId>org.postgresql</groupId>
 				<artifactId>postgresql</artifactId>
-				<version>42.3.2</version>
-			</dependency>
+				<version>42.5.0</version>
+			</dependency> 
 			<dependency>
 				<groupId>org.apache.commons</groupId>
 				<artifactId>commons-dbcp2</artifactId>
