--- a/server/wfnews-persistence/pom.xml
+++ b/server/wfnews-persistence/pom.xml
@@ -11,7 +11,26 @@
 		<version>1.0.0-SNAPSHOT</version>
 	</parent>
 	<dependencies>
-
+	
+		<dependency>
+			<groupId>ca.bc.gov.nrs.wfnews</groupId>
+			<artifactId>wfnews-model</artifactId>
+			<version>${project.parent.version}</version>
+		</dependency>
+		
+		<dependency>
+			<groupId>ca.bc.gov.nrs.wfnews</groupId>
+			<artifactId>wfnews-api-rest-common</artifactId>
+			<version>${project.parent.version}</version>
+		</dependency>
+		<dependency>
+    <groupId>postgresql</groupId>
+    <artifactId>postgresql</artifactId>
+</dependency>
+		<dependency>
+			<groupId>org.postgresql</groupId>
+			<artifactId>postgresql</artifactId>
+		</dependency> 
 		<!-- NRS Common -->
 		<dependency>
 			<groupId>ca.bc.gov.nrs.wfone.common</groupId>
@@ -23,6 +42,15 @@
 			<artifactId>wfone-common-utils</artifactId>
 			<version>1.3.0</version>
 		</dependency>
+		<dependency>
+				<groupId>ca.bc.gov.nrs.common</groupId>
+				<artifactId>nrs-common-persistence</artifactId>
+		</dependency>
+		<dependency>
+            <groupId>ca.bc.gov.webade</groupId>
+            <artifactId>webade-oauth2-common</artifactId>
+            <version>1.6.3</version>
+        </dependency>
 
 		<dependency>
 			<groupId>org.springframework</groupId>
