--- a/server/wfnews-service-api/pom.xml
+++ b/server/wfnews-service-api/pom.xml
@@ -16,6 +16,11 @@
 	<dependencies>
 	
 	<dependency>
+			<groupId>ca.bc.gov.nrs.wfone.common</groupId>
+			<artifactId>wfone-common-rest-endpoints</artifactId>
+		</dependency>
+	
+	<dependency>
 			<groupId>org.codehaus.jackson</groupId>
 			<artifactId>jackson-jaxrs</artifactId>
       <version>1.9.13</version>
@@ -26,7 +31,14 @@
       <artifactId>wfim-incidents-api-rest-common</artifactId>
       <version>1.5.0-SNAPSHOT</version>
     </dependency>
-    
+    <dependency>
+    <groupId>postgresql</groupId>
+    <artifactId>postgresql</artifactId>
+</dependency>
+  	 <dependency>
+			<groupId>org.postgresql</groupId>
+			<artifactId>postgresql</artifactId>
+		</dependency>
 		<dependency>
 			<groupId>ca.bc.gov.nrs.wfnews</groupId>
 			<artifactId>wfnews-model</artifactId>
@@ -48,8 +60,46 @@
 		<dependency>
 			<groupId>ca.bc.gov.nrs.wfone.common</groupId>
 			<artifactId>wfone-common-service-api</artifactId>
-			<version>1.3.0</version>
 		</dependency>
+		<dependency>
+			<groupId>ca.bc.gov.nrs.wfone.common</groupId>
+			<artifactId>wfone-common-rest-client</artifactId>
+		</dependency>
+
+		
+		<dependency>
+				<groupId>ca.bc.gov.nrs.common</groupId>
+				<artifactId>nrs-common-service-api</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>ca.bc.gov.nrs.common</groupId>
+			<artifactId>nrs-common-service-api</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>ca.bc.gov.nrs.common</groupId>
+			<artifactId>nrs-common-persistence</artifactId>
+		</dependency>
+		<!--<dependency>
+			<groupId>ca.bc.gov.nrs.common</groupId>
+			<artifactId>nrs-common-code-endpoints</artifactId>
+		</dependency> -->
+		<dependency>
+				<groupId>ca.bc.gov.nrs.common</groupId>
+				<artifactId>nrs-common-rest-endpoints</artifactId>
+				<exclusions>
+                <exclusion>
+				<groupId>org.glassfish.jersey.ext</groupId>
+				<artifactId>jersey-spring3</artifactId>
+                </exclusion>
+            </exclusions>
+		</dependency>
+		
+		<dependency>
+            <groupId>ca.bc.gov.webade</groupId>
+            <artifactId>webade-oauth2-common</artifactId>
+            <version>1.6.3</version>
+        </dependency>
+        
 		
 		<dependency>
             <groupId>com.mashape.unirest</groupId>
