--- a/docker/Dockerfile_db_reverse_proxy
+++ b/docker/Dockerfile_db_reverse_proxy
@@ -1,2 +1,3 @@
 FROM nginx:latest
-COPY docker/default.conf /etc/nginx/conf.d/default.conf
+COPY docker/streamconf /etc/nginx/streamconf
+RUN cat streamconf >> /etc/nginx/nginx.conf
